<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawerLayoutMaps"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:id="@+id/root_layout"
        android:layout_width="wrap_content"
        android:layout_height="match_parent">

        <fragment
            android:id="@+id/map"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

        <com.google.android.material.chip.Chip
            android:id="@+id/decline_chip"
            android:theme="@style/Theme.MaterialComponents.Light"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:textColor="@color/white"
            android:text="@string/decline"
            android:visibility="gone"
            app:chipBackgroundColor="@color/light_Blue"
            app:chipIcon="@drawable/ic_baseline_clear_24"
            app:chipIconTint="@color/dark_Blue"
            app:chipCornerRadius="80dp"/>

        <androidx.cardview.widget.CardView
            android:id="@+id/accept_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:layout_gravity="bottom"
            android:layout_margin="8dp"
            app:cardBackgroundColor="@color/light_Blue"
            app:cardCornerRadius="8dp"
            tools:ignore="MissingConstraints">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="vertical"
                android:padding="16dp">


                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="false"
                    android:gravity="center_vertical">

                    <com.mikhaellopez.circularprogressbar.CircularProgressBar
                        android:id="@+id/progress_bar"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_marginLeft="10dp"
                        app:cpb_background_progressbar_color="@color/white"
                        app:cpb_background_progressbar_width="3dp"
                        app:cpb_progress="0"
                        app:cpb_progress_direction="to_right"
                        app:cpb_progress_max="100"
                        app:cpb_progressbar_color="@color/dark_Blue"
                        app:cpb_progressbar_width="3dp"
                        app:cpb_round_border="false"/>

                    <ImageView
                        android:id="@+id/image_round"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_centerInParent="true"
                        android:clickable="false"
                        android:layout_marginLeft="40dp"
                        android:src="@drawable/ic_baseline_person_24"
                        app:tint="@color/white" />

                </RelativeLayout>

                <TextView
                    android:id="@+id/txt_estimate_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="8dp"
                    android:text="5 min"
                    android:textColor="@color/white"
                    android:textSize="20dp"/>

                <TextView
                    android:id="@+id/txt_estimate_distance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="8dp"
                    android:text="0.5 km"
                    android:textColor="@color/white"
                    android:textSize="16sp"/>



            </LinearLayout>

        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:id="@+id/start_journey"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:layout_gravity="bottom"
            android:layout_margin="8dp"
            app:cardBackgroundColor="@color/light_Blue"
            app:cardCornerRadius="8dp"
            tools:ignore="MissingConstraints">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_baseline_keyboard_arrow_down_24"/>

                    <ImageView
                        android:id="@+id/image_start_journey"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dp"
                        android:layout_marginRight="8dp"
                        android:layout_centerHorizontal="true"
                        android:src="@drawable/ic_baseline_person_24"/>

                    <TextView
                        android:id="@+id/txt_start_estimate_time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:text="1 min"
                        android:textColor="@color/white"
                        android:layout_toLeftOf="@id/image_start_journey"/>

                    <TextView
                        android:id="@+id/txt_start_estimate_distance"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:text="0.5 km"
                        android:textColor="@color/white"
                        android:layout_toRightOf="@id/image_start_journey"/>

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:src="@drawable/ic_baseline_format_list_bulleted_24"/>


                </RelativeLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="16dp"
                    android:background="@color/white"/>

                <LinearLayout
                    android:id="@+id/layout_notify_user"
                    android:visibility="gone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/txt_notify_user"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:text="02:00"
                        android:textSize="18sp"
                        android:textColor="@color/white"/>

                    <ProgressBar
                        android:id="@+id/progress_notify"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:min="0"
                        android:max="120"
                        android:indeterminate="false"
                        style="@style/Widget.AppCompat.ProgressBar.Horizontal"/>




                </LinearLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/image_phone"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:src="@drawable/ic_baseline_perm_phone_msg_24"/>

                    <TextView
                        android:id="@+id/txt_user_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Eugene"
                        android:textColor="@color/white"
                        android:textSize="22dp"
                        android:layout_centerInParent="true"/>

                    <ImageView
                        android:id="@+id/image_three_dots"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_alignParentRight="true"
                        android:src="@drawable/ic_baseline_more_vert_24"/>

                </RelativeLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.kusu.library.LoadingButton

                    android:id="@+id/take_Pictures"
                    android:enabled="false"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:text="@string/collection_camera"
                    android:textColor="@color/dark_Blue"
                    app:lb_buttonColor="@color/white"
                    app:lb_isCircular="false"/>

                <com.kusu.library.LoadingButton

                    android:id="@+id/start_journey_button"
                    android:enabled="false"
                    android:visibility="gone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:text="@string/start_journey"
                    android:textColor="@color/dark_Blue"
                    app:lb_buttonColor="@color/white"
                    app:lb_isCircular="false"/>

                <com.kusu.library.LoadingButton

                    android:id="@+id/complete_journey_button"
                    android:enabled="false"
                    android:visibility="gone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:text="@string/complete_journey"
                    android:textColor="@color/dark_Blue"
                    app:lb_buttonColor="@color/white"
                    app:lb_isCircular="false"/>

                <com.kusu.library.LoadingButton

                    android:id="@+id/complete_Pictures"
                    android:enabled="false"
                    android:visibility="gone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:text="@string/dropOff_camera"
                    android:textColor="@color/dark_Blue"
                    app:lb_buttonColor="@color/white"
                    app:lb_isCircular="false"/>

                <com.kusu.library.LoadingButton

                    android:id="@+id/hard_braking"
                    android:enabled="false"
                    android:visibility="gone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:text="@string/hard_braking"
                    android:backgroundTint="@color/red"
                    android:textColor="@color/white"
                    android:textSize="30dp"
                    app:lb_buttonColor="@color/white"
                    app:lb_isCircular="false"/>

            </FrameLayout>


            </LinearLayout>

        </androidx.cardview.widget.CardView>



    </FrameLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navViewMaps"
        android:layout_width="185dp"
        android:layout_height="match_parent"
        app:headerLayout="@layout/nav_header_main"
        app:menu="@menu/nav_header_menu"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"/>

</androidx.drawerlayout.widget.DrawerLayout>